# RobotDynamics

./: CMakeLists.txt  main.cpp  readMe.md
src/graphing/: graph_primitives.hpp
src/kinematics/: foward_kinematics.hpp  inverse_kinematics.hpp  kinetics.hpp  velocity_kinematics.hpp
src/utils/: iterations.hpp
